Fixed background image on mobile, edited card

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,7 @@ body {
   background: var(--background);
   color: var(--foreground);
 }
+
+img {
+  image-rendering: auto;
+}
